[package]
name = "vatsim_data_recorder"
version = "0.1.0"
edition = "2021"
authors = ["Celeo <mattboulanger@fastmail.com>"]
description = "Simple app to record data from VATSIM to a database file"
readme = "README.md"
homepage = "https://github.com/celeo/vatsim_pilot_glance"
repository = "https://github.com/celeo/vatsim_pilot_glance"
license = "MIT OR Apache-2.0"
exclude = [".github"]
keywords = ["vatsim"]
categories = []

[dependencies]
anyhow = "1.0.60"
chrono = "0.4.20"
clap = { version = "3.2.16", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
vatsim_utils = "0.3.2"
